Cynthia's edit:  fix Rudin and Ertekin citation

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -30,14 +30,6 @@ author = {V. Kaxiras and A. Saligrama},
 year = 2018
 }
 
-@unpublished{ErtekinRu17,
-__author={Seyda Ertekin and Cynthia Rudin},
-author={S. Ertekin and C. Rudin},
-title={Learning Customized and Optimized Lists of Rules with Mathematical Programming},
-year={2017},
-note={Unpublished}
-}
-
 @inproceedings{ChenRu18,
   __author  = {Chaofan Chen and Cynthia Rudin},
   author    = {C. Chen and C. Rudin},
@@ -578,12 +570,12 @@ author={Muggleton, S. and De Raedt, L.},
 	Volume = {180},
 	Year = {2017}}
 
-@techreport{RudinEr15-tr,
+@unpublished{RudinEr16,
 __author={Cynthia Rudin and {\c{S}}eyda Ertekin},
-author={Ertekin, {\c{S}}. and Rudin, C.},
-year={2015},
-title={Learning Optimized Lists of Classification Rules},
-institution={Massachusetts Institute of Technology}
+author={Rudin, C. and Ertekin, {\c{S}}.},
+title={Learning Customized and Optimized Lists of Rules with Mathematical Programming},
+year={2016},
+note={Submitted}
 }
 
 @article{Lip10,
