--- a/paper/sections/related_work.tex
+++ b/paper/sections/related_work.tex
@@ -26,7 +26,7 @@ Most papers in these fields aim to carefully guide the search through the space 
 
 Some of our bounds, including the minimum support bound
 (\S\ref{sec:lb-support}, Theorem~\ref{thm:min-capture}),
-come from \citet{ErtekinRu17}, who provide flexible mixed-integer programming (MIP)
+come from \citet{RudinEr16}, who provide flexible mixed-integer programming (MIP)
 formulations using the same objective as we use here;
 MIP solvers in general cannot compete with the speed of CORELS.
 
