Standardize arxiv citations and urls in references

--- a/paper/refs.bib
+++ b/paper/refs.bib
@@ -24,7 +24,7 @@ month = apr
 
 @misc{corels-website,
 title = {Building Predictive Models with Rule Lists},
-note = {\url{https://corels.eecs.harvard.edu}},
+url = {https://corels.eecs.harvard.edu},
 __author = {Vassilios Kaxiras and Aditya Saligrama},
 author = {V. Kaxiras and A. Saligrama},
 year = 2018
@@ -464,9 +464,12 @@ year={2015}
 title={Causal Falling Rule Lists},
 __author={Fulton Wang and Cynthia Rudin},
 author={F. Wang and C. Rudin},
-    journal={Preprint at arXiv:1510.05189},
+    journal={CoRR},
+    volume = {abs/1510.05189},
     year={2015},
-    month=oct
+    url = {https://arxiv.org/abs/1510.05189},
+    archivePrefix = {arXiv},
+    eprint = {1510.05189}
 }
 
 @article{GohRu18causal,
@@ -1031,21 +1034,21 @@ institution = "University of California, Irvine, School of Information and Compu
 
 @misc{nypd,
 title = "Stop, Question and Frisk Data",
-note = {\url{http://www1.nyc.gov/site/nypd/stats/reports-analysis/stopfrisk.page}},
+url = {http://www1.nyc.gov/site/nypd/stats/reports-analysis/stopfrisk.page},
 author = {{New York Police Department}},
 year = 2016
 }
 
 @misc{nyclu:2014,
 title = "Stop-and-Frisk Data",
-note = {\url{http://www.nyclu.org/content/stop-and-frisk-data}},
+url = {http://www.nyclu.org/content/stop-and-frisk-data},
 author = {{New York Civil Liberties Union}},
 year = 2014
 }
 
 @misc{npr-bail:2017,
 title = {Did A Bail Reform Algorithm Contribute To This {S}an {F}rancisco Man's Murder?},
-note = {\url{https://www.npr.org/2017/08/18/543976003/did-a-bail-reform-algorithm-contribute-to-this-san-francisco-man-s-murder}},
+url = {https://www.npr.org/2017/08/18/543976003/did-a-bail-reform-algorithm-contribute-to-this-san-francisco-man-s-murder},
 __author = {Eric Westervelt},
 author = {E. Westervelt},
 year = 2017
