Conc: [notions ...] different than that -> different from those

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -110,7 +110,7 @@ features themselves are not interpretable.
 %
 It could instead be used as a final classifier for image processing problems
 where the features were created beforehand; for instance, one could create classifiers
-for each part of an image, and use CORELS to create a final combined classifier. The notions of interpretability used in image classification tend to be completely different than that for structured data where each feature is separately meaningful \citep[e.g., see][]{LiEtAl18}. For structured data, decision trees, along with scoring systems, tend to be popular forms of transparent models. Scoring systems are sparse linear models with integer coefficients, and they can also be created from data \citep{UstunRu2017KDD,UstunRu2016SLIM}. 
+for each part of an image, and use CORELS to create a final combined classifier. The notions of interpretability used in image classification tend to be completely different from those for structured data where each feature is separately meaningful \citep[e.g., see][]{LiEtAl18}. For structured data, decision trees, along with scoring systems, tend to be popular forms of transparent models. Scoring systems are sparse linear models with integer coefficients, and they can also be created from data \citep{UstunRu2017KDD,UstunRu2016SLIM}.
 
 In some of our experiments, CORELS produces a DNF formula by coincidence, but it might be possible to create a much simpler version of CORELS that only produces DNF. This could build off previous algorithms for creating an optimal DNF formula \citep{Rijnbeek10,WangEtAl16,WangEtAl2017}.
 
