Conclusion: that are remain -> that remain

--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -142,7 +142,7 @@ which would be an extension of this work.
 
 While CORELS does not directly handle continuous variables, we have found that it is not difficult in practice to construct a rule set that is sufficient for creating a useful model. It may be possible to use techniques such as Fast Boxes \citep{GohRu14} to discover useful and interpretable rules for continuous data that can be used within CORELS.
 
-An interesting direction for future research would be to create a hybrid interpretable/ black-box model in the style of \citet{Wang2018}, where the rule list would eliminate large parts of the space away from the decision boundary, and the observations that are remain are evaluated by a black box model rather than a default rule.
+An interesting direction for future research would be to create a hybrid interpretable/ black-box model in the style of \citet{Wang2018}, where the rule list would eliminate large parts of the space away from the decision boundary, and the observations that remain are evaluated by a black box model rather than a default rule.
 
 
 Lastly, CORELS does not create generic single-variable-split decision trees.
