Delete a few words in speedup caption

--- a/paper/sections/experiments-long.tex
+++ b/paper/sections/experiments-long.tex
@@ -1207,6 +1207,7 @@ CORELS without the permutation bound (Corollary~\ref{thm:permutation}),
 and thus the symmetry-aware map,
 requires more than an hour, \ie orders of magnitude more time, to complete (thick lines).
 
+%\clearpage
 \subsection{Algorithmic Speedup}
 \label{sec:speedup}
 
@@ -1228,7 +1229,7 @@ Solving this problem using brute force is impractical due to the inability to ex
 %
 Removing only the equivalent points bound requires exploring prefixes of up to length 10 (see Table \ref{tab:ablation}), a clearly intractable problem.
 %
-Even with all of our improvements, however, it is only recently that processors have been fast enough in order to allow this type of discrete optimization algorithm to succeed.
+Even with all of our improvements, however, it is only recently that processors have been fast enough for this type of discrete optimization algorithm to succeed.
 }
 %\vspace{4mm}
 \label{tab:speedup}
