--- a/paper/arxiv.tex
+++ b/paper/arxiv.tex
@@ -27,25 +27,25 @@
 
 \title{Learning Certifiably Optimal Rule Lists for Categorical Data}
 
-\author{\name Elaine Angelino$^\dag$ \email elaine@eecs.berkeley.edu \\
+\author{\name Elaine Angelino \email elaine@eecs.berkeley.edu \\
         \addr Department of Electrical Engineering and Computer Sciences\\
         University of California, Berkeley,
         Berkeley, CA 94720
         \AND
-        \name Nicholas Larus-Stone$^\dag$ \email nlarusstone@alumni.harvard.edu \\
+        \name Nicholas Larus-Stone \email nlarusstone@alumni.harvard.edu \\
         \name Daniel Alabi \email alabid@g.harvard.edu \\
-        \name Margo Seltzer$^\dag$ \email margo@eecs.harvard.edu \\
+        \name Margo Seltzer \email margo@eecs.harvard.edu \\
         \addr School of Engineering and Applied Sciences\\
         Harvard University,
         Cambridge, MA 02138
         \AND
-        \name Cynthia Rudin$^\dag$ \email cynthia@cs.duke.edu \\
+        \name Cynthia Rudin$^*$ \email cynthia@cs.duke.edu \\
         \addr Department of Computer Science and
         Department of Electrical and Computer Engineering\\
         Duke University,
         Durham, NC 27708}
 
-\editor{Maya Gupta\\ $^\dag$These authors contributed equally.}
+\editor{Maya Gupta\\ $^*$To whom correspondence should be addressed.}
 %\footnote{}
 
 \maketitle
