--- a/jmlr/17-716.tex
+++ b/jmlr/17-716.tex
@@ -51,7 +51,24 @@
 \maketitle
 
 \begin{abstract}%   <- trailing '%' for backward compatibility of .sty file
-\input{sections/abstract}
+We present the design and implementation of a custom discrete optimization
+technique for building rule lists over a categorical feature space.
+%
+Our algorithm produces rule lists with optimal training performance,
+according to the regularized empirical risk, with a certificate of optimality.
+%
+By leveraging algorithmic bounds, efficient data structures,
+and computational reuse, we achieve several orders of magnitude speedup in time
+and a massive reduction of memory consumption.
+%
+We demonstrate that our approach produces optimal rule lists on practical
+problems in seconds.
+%
+Our results indicate that it is possible to construct optimal sparse rule lists that are
+approximately as accurate as the COMPAS proprietary risk prediction tool on data from
+Broward County, Florida, but that are completely interpretable.
+%
+This framework is a novel alternative to CART and other decision tree methods for interpretable modeling.
 \end{abstract}
 
 \begin{keywords}
