--- a/jmlr/17-716.tex
+++ b/jmlr/17-716.tex
@@ -6,7 +6,24 @@
 \usepackage{url}
 \usepackage[usenames,dvipsnames,svgnames,table]{xcolor}
 
-\input{latex_front}
+\usepackage{algorithm}
+\usepackage{algpseudocode}
+\usepackage{caption}
+\usepackage{comment}
+\usepackage{dsfont}
+\usepackage{graphicx,verbatim}
+\usepackage{listings}
+\usepackage{subcaption}
+\usepackage{todonotes}
+
+\usepackage{tikz}
+\usetikzlibrary{arrows}
+
+\frenchspacing
+\hyphenation{speed-up}
+\hyphenation{ProPublica}
+\hyphenation{NYCLU}
+
 \input{latex_macros}
 
 \usepackage{caption}
