--- a/jmlr/17-716.tex
+++ b/jmlr/17-716.tex
@@ -5861,6 +5861,6 @@ C4.5 finds large models for all tested parameters.
 \label{fig:sparsity-cpw}
 \end{figure}
 
-\bibliography{refs}
+\bibliography{17-716}
 
 \end{document}
